--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "dev": "nodemon ."
     },
     "dependencies": {
+        "@keyv/mongo": "^1.1.0",
         "discord.js": "^11.5.1",
-        "dotenv": "^8.0.0"
+        "dotenv": "^8.0.0",
+        "mongodb": "^3.3.0-beta2"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
